Fix form legend alignment bug in firefox

--- a/src/style.css
+++ b/src/style.css
@@ -498,7 +498,7 @@ label {
 legend {
   font-size: 1.4rem;
   display: flex;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
 }
 label[for="priority1"],
